Improve test case with _variables.scss & Namespace rewrite of css

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 @import '../fonts/fonts.scss';
 
-body {
-  background: #ccc;
+html.darkMode {
+  @import '../lib/SomeLib/builtIn'; // Note the extension should not be added, this is intended to use namespace feature
 }
 
